# Clover-CodeRelease

./: CAGRA_INTEGRATION.md  CAGRA_SUMMARY.md  CMakeLists.txt  integration_guide.md
examples/: cagra_example.cu
include/: 1.cuh  bitonic-hubs-ws.cuh  cagra.cuh  cagra_optimized.cuh  spatial.cuh  tensorcore_distance.cuh  tensorcore_util.cuh
scripts/: benchmark_cagra.py
src/: cagra.cu  linear-scans.cu
